--- a/_posts/2020-07-30-ASE.md
+++ b/_posts/2020-07-30-ASE.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover: https://www.visitvictoria.com/-/media/atdw/melbourne/things-to-do/art-theatre-and-culture/performing-arts/cf0d49bf61e0a578812b674d4605de0e_2048x1152.jpeg
+cover: /www.visitvictoria.com/-/media/atdw/melbourne/things-to-do/art-theatre-and-culture/performing-arts/cf0d49bf61e0a578812b674d4605de0e_2048x1152.jpeg
 navigation: True
 title: ASE 2020 Paper
 date: 2020-07-30 08:30:00
