--- a/_posts/2020-07-30-ASE.md
+++ b/_posts/2020-07-30-ASE.md
@@ -8,7 +8,7 @@ date: 2020-07-30 08:30:00
 tags: announcements
 class: post-template
 subclass: 'post tag-announcements'
-author: mj
+author: mjafar
 ---
 
 I am proud to announce that my latest paper, [Hybrid Deep Neural Networks to Infer State Models of Black-Box Systems](/papers/2020-Hybrid.pdf), is accepted for publication at ACM/IEEE conference ASE '20. 
