Fixed some typos

--- a/_posts/2020-07-30-ASE.md
+++ b/_posts/2020-07-30-ASE.md
@@ -3,7 +3,7 @@ layout: post
 current: post
 cover: /www.visitvictoria.com/-/media/atdw/melbourne/things-to-do/art-theatre-and-culture/performing-arts/cf0d49bf61e0a578812b674d4605de0e_2048x1152.jpeg
 navigation: True
-title: ASE 2020 Paper
+title: New publication at ASE 2020 conference
 date: 2020-07-30 08:30:00
 tags: announcements
 class: post-template
@@ -16,7 +16,7 @@ I am proud to announce that my latest paper, [Hybrid Deep Neural Networks to Inf
 In that work, I created a deep neural network architecture to detect internal state of an autopilot system (developed by our industry partner, MicroPilot Inc), as a blackbox system. For more details, I encourage you to read the paper, available [here](/papers/2020-Hybrid.pdf). This is the first milestone of this project, later after submitting this paper I worked on replicating this paper on another case study as well as improving it on other aspects as well. 
 The results of the next extensions can be read in my [MSc thesis](https://github.com/MJafarMashhadi/University-of-Calgary-Graduate-Thesis). Source code (incl. docs) and data are publicly available on Github as well. [[1]](https://github.com/sea-lab/hybrid-net), [[2]](https://github.com/MJafarMashhadi/pprz_tester).
 
-Due to the current devastating COVID situation, I will be presenting it online. Presentation slides and probably aa recording of the presentation will become available later, check [publications page](/publications/) on this website out for more information.
+Due to the current devastating COVID situation, I will be presenting it online. Presentation slides and probably a recording of the presentation will become available later, check [publications page](/publications/) on this website out for more information.
 
 
 Abstract:
