Updated the paper link to arXiv

--- a/_posts/2020-07-30-ASE.md
+++ b/_posts/2020-07-30-ASE.md
@@ -13,7 +13,7 @@ author: mjafar
 
 I am proud to announce that my latest paper, [Hybrid Deep Neural Networks to Infer State Models of Black-Box Systems](/papers/2020-Hybrid.pdf), is accepted for publication at ACM/IEEE conference ASE '20. 
 
-In that work, I created a deep neural network architecture to detect internal state of an autopilot system (developed by our industry partner, MicroPilot Inc), as a blackbox system. For more details, I encourage you to read the paper, available [here](/papers/2020-Hybrid.pdf). This is the first milestone of this project, later after submitting this paper I worked on replicating this paper on another case study as well as improving it on other aspects as well. 
+In that work, I created a deep neural network architecture to detect internal state of an autopilot system (developed by our industry partner, MicroPilot Inc), as a blackbox system. For more details, I encourage you to read the paper, available [here](https://arxiv.org/abs/2008.11856). This is the first milestone of this project, later after submitting this paper I worked on replicating this paper on another case study as well as improving it on other aspects as well. 
 The results of the next extensions can be read in my [MSc thesis](https://github.com/MJafarMashhadi/University-of-Calgary-Graduate-Thesis). Source code (incl. docs) and data are publicly available on Github as well. [[1]](https://github.com/sea-lab/hybrid-net), [[2]](https://github.com/MJafarMashhadi/pprz_tester).
 
 Due to the current devastating COVID situation, I will be presenting it online. Presentation slides and probably a recording of the presentation will become available later, check [publications page](/publications/) on this website out for more information.
